--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3869,3 +3869,93 @@ h6,
   font-size: 14px;
   text-align: left;
 }
+
+
+
+#header3-de .mbr-section-title,
+#header3-de .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-df .mbr-section-title,
+#header3-df .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-df .mbr-section-title {
+  font-size: 20px;
+}
+#header3-df .mbr-section-subtitle {
+  font-family: 'Titillium Web', sans-serif;
+  color: #b86a7b;
+}
+#ext_menu-dg .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-dg .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-dg .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-dg .close-icon::before,
+#ext_menu-dg .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-dg .link,
+#ext_menu-dg .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-dg .link {
+  font-size: 1.05rem;
+}
+#ext_menu-dg .dropdown-item,
+#ext_menu-dg .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-dg .link:hover,
+#ext_menu-dg .dropdown-item:hover,
+#ext_menu-dg .link:focus,
+#ext_menu-dg .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-dg .link[aria-expanded="true"],
+#ext_menu-dg .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-dg .nav-dropdown-sm .link:focus,
+#ext_menu-dg .nav-dropdown-sm .link:hover,
+#ext_menu-dg .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-dg .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-dg .navbar,
+#ext_menu-dg .nav-dropdown-sm,
+#ext_menu-dg .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-dg .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-dg .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-dg .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-dg .bg-color.transparent.opened .link:hover,
+#ext_menu-dg .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-dg .link[aria-expanded="true"],
+#ext_menu-dg .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#footer1-dh P {
+  color: #fce794;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
+}
+#header3-dj .mbr-section-title,
+#header3-dj .mbr-section-subtitle {
+  text-align: center;
+}
