--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6,9 +6,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
@@ -17,6 +16,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 
@@ -501,6 +501,9 @@ section.form .container {
   color: #f1aaa7;
   font-size: 16px;
 }
+#content1-a5 DIV {
+  color: #7e9b9f;
+}
 #contacts1-2c STRONG {
   color: #28262b;
 }
@@ -556,19 +559,19 @@ section.form .container {
 }
 #menu-g4 .link[aria-expanded="true"],
 #menu-g4 .dropdown-menu {
-  background: #e6e6e6;
+  background: #737373;
 }
 #menu-g4 .nav-dropdown-sm .link:focus,
 #menu-g4 .nav-dropdown-sm .link:hover,
 #menu-g4 .nav-dropdown-sm .dropdown-item:focus,
 #menu-g4 .nav-dropdown-sm .dropdown-item:hover {
-  background: #f7f7f7!important;
+  background: #848484!important;
 }
 #menu-g4 .navbar,
 #menu-g4 .nav-dropdown-sm,
 #menu-g4 .nav-dropdown-sm .link[aria-expanded="true"],
 #menu-g4 .nav-dropdown-sm .dropdown-menu {
-  background: #ffffff;
+  background: #8c8c8c;
 }
 #menu-g4 .bg-color.transparent .link {
   color: #000000;
@@ -700,8 +703,6 @@ section.form .container {
 }
 
 
-
-
 #header3-5z .mbr-section-title,
 #header3-5z .mbr-section-subtitle {
   text-align: center;
@@ -768,35 +769,10 @@ section.form .container {
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
 }
-#header3-7w .mbr-section-title,
-#header3-7w .mbr-section-subtitle {
-  text-align: center;
-}
-#header3-7w .mbr-section-title {
-  font-size: 30px;
-}
 #footer1-4z P {
   color: #282828;
   text-align: center;
   font-family: 'PT Serif', serif;
-  font-size: 12px;
-}
-#content2-7v SPAN {
-  font-family: 'Droid Serif', serif;
-  font-size: 12px;
-  color: #000000;
-}
-#content2-7v DIV {
-  text-align: left;
-}
-#content2-7v P {
-  color: #e25041;
-  text-align: left;
-}
-#content1-7x P {
-  text-align: center;
-  color: #847272;
-  font-family: 'Merriweather', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
