--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
+@import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
@@ -8,9 +9,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
@@ -19,6 +19,8 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
+
 
 
 
@@ -491,14 +493,13 @@ section.form .container {
 #image1-a2 P {
   font-family: 'Source Sans Pro', sans-serif;
 }
-#content1-a5 P {
-  font-family: 'PT Sans', sans-serif;
+#header3-gi .mbr-section-title,
+#header3-gi .mbr-section-subtitle {
   text-align: center;
-  color: #f1aaa7;
-  font-size: 16px;
 }
-#content1-a5 DIV {
-  color: #7e9b9f;
+#header3-gi .mbr-section-title {
+  font-size: 15px;
+  font-family: 'Droid Sans', sans-serif;
 }
 #social-buttons2-fj .mbr-section-title,
 #social-buttons2-fj .btn-social {
@@ -508,10 +509,14 @@ section.form .container {
   vertical-align: middle;
   padding-right: 0;
 }
+#social-buttons2-fj .mbr-section-title {
+  font-size: 36px;
+  font-family: 'Montserrat', sans-serif;
+}
 #footer1-1b P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -624,7 +629,7 @@ section.form .container {
 #footer1-1b P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -759,7 +764,7 @@ section.form .container {
 #footer1-4z P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -1056,7 +1061,7 @@ section.form .container {
 #footer1-8e P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -1305,7 +1310,7 @@ section.form .container {
 #footer1-8e P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -1851,7 +1856,7 @@ section.form .container {
 #footer1-4z P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -2037,7 +2042,7 @@ section.form .container {
 #footer1-1b P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -2219,7 +2224,7 @@ section.form .container {
 #footer1-4i P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #content1-4j P {
@@ -2407,7 +2412,7 @@ section.form .container {
 #footer1-4z P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #content1-50 P {
@@ -2624,7 +2629,7 @@ section.form .container {
 #footer1-4z P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -2810,7 +2815,7 @@ section.form .container {
 #footer1-6g P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -3257,7 +3262,7 @@ section.form .container {
 #footer1-77 P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-7d H3 {
@@ -3409,7 +3414,7 @@ section.form .container {
 #footer1-7g P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -3504,7 +3509,7 @@ section.form .container {
 #footer1-7n P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -3636,7 +3641,7 @@ section.form .container {
 #footer1-7p P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #header3-7q .mbr-section-title,
@@ -3946,7 +3951,7 @@ section.form .container {
 #footer1-8e P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-8g H3 {
@@ -4106,7 +4111,7 @@ section.form .container {
 #footer1-9c P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-9d H3 {
@@ -4283,7 +4288,7 @@ section.form .container {
 #footer1-9g P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #content1-9i P {
@@ -4441,7 +4446,7 @@ section.form .container {
 #footer1-9o P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -4539,7 +4544,7 @@ section.form .container {
 #footer1-ap P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -4797,7 +4802,7 @@ section.form .container {
 #footer1-b9 P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #header3-ba .mbr-section-title,
@@ -4964,7 +4969,7 @@ section.form .container {
 #footer1-bh P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #header3-bk .mbr-section-title,
@@ -5112,7 +5117,7 @@ section.form .container {
 #footer1-bh P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -5256,7 +5261,7 @@ section.form .container {
 #footer1-bv P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #features3-bw P {
@@ -5409,7 +5414,7 @@ section.form .container {
 #footer1-c0 P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -5563,7 +5568,7 @@ section.form .container {
 #footer1-ca P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-cb H3 {
@@ -5733,7 +5738,7 @@ section.form .container {
 #footer1-ck P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-cl H3 {
@@ -5904,7 +5909,7 @@ section.form .container {
 #footer1-cx P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-cy H3 {
@@ -6084,7 +6089,7 @@ section.form .container {
 #footer1-d7 P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #msg-box5-d8 H3 {
@@ -6248,7 +6253,7 @@ section.form .container {
 #footer1-dh P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #header3-dj .mbr-section-title,
@@ -6320,7 +6325,7 @@ section.form .container {
 #footer1-dv P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -6464,7 +6469,7 @@ section.form .container {
 #footer1-ef P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -6608,7 +6613,7 @@ section.form .container {
 #footer1-ej P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #features3-ek P {
@@ -6761,7 +6766,7 @@ section.form .container {
 #footer1-er P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -6897,7 +6902,7 @@ section.form .container {
 #footer1-ez P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -7051,7 +7056,7 @@ section.form .container {
 #footer1-fm P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -7119,7 +7124,7 @@ section.form .container {
 #footer1-fv P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
@@ -7187,7 +7192,7 @@ section.form .container {
 #footer1-fy P {
   color: #282828;
   text-align: center;
-  font-family: 'PT Serif', serif;
+  font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
