create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -500,6 +500,7 @@ section.form .container {
 #header3-gi .mbr-section-title {
   font-size: 15px;
   font-family: 'Droid Sans', sans-serif;
+  text-align: center;
 }
 #social-buttons2-fj .mbr-section-title,
 #social-buttons2-fj .btn-social {
