--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6914,3 +6914,150 @@ section.form .container {
 #menu-g4 .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
 }
+
+
+
+
+#header3-gw .mbr-section-title,
+#header3-gw .mbr-section-subtitle {
+  text-align: center;
+}
+#ext_menu-gx .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-gx .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-gx .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-gx .close-icon::before,
+#ext_menu-gx .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-gx .link,
+#ext_menu-gx .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-gx .link {
+  font-size: 1.05rem;
+}
+#ext_menu-gx .dropdown-item,
+#ext_menu-gx .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-gx .link:hover,
+#ext_menu-gx .dropdown-item:hover,
+#ext_menu-gx .link:focus,
+#ext_menu-gx .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-gx .link[aria-expanded="true"],
+#ext_menu-gx .dropdown-menu {
+  background: #307193;
+}
+#ext_menu-gx .nav-dropdown-sm .link:focus,
+#ext_menu-gx .nav-dropdown-sm .link:hover,
+#ext_menu-gx .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-gx .nav-dropdown-sm .dropdown-item:hover {
+  background: #3985ad!important;
+}
+#ext_menu-gx .navbar,
+#ext_menu-gx .nav-dropdown-sm,
+#ext_menu-gx .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-gx .nav-dropdown-sm .dropdown-menu {
+  background: #3d8eb9;
+}
+#ext_menu-gx .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-gx .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-gx .bg-color.transparent.opened .link:hover,
+#ext_menu-gx .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-gx .link[aria-expanded="true"],
+#ext_menu-gx .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#footer1-gy P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
+}
+#msg-box5-gz H3 {
+  font-size: 21px;
+  text-align: left;
+  font-family: 'Merriweather', serif;
+}
+#msg-box5-gz P {
+  font-size: 13px;
+  font-family: 'Merriweather', serif;
+  text-align: left;
+}
+#undefined .hide-buttons .nav-btn {
+  display: none !important;
+}
+#undefined .navbar-caption {
+  color: #ffffff;
+}
+#undefined .navbar-toggler {
+  color: #000000;
+}
+#undefined .close-icon::before,
+#undefined .close-icon::after {
+  background-color: #000000;
+}
+#undefined .link,
+#undefined .dropdown-item {
+  color: #000000;
+}
+#undefined .link {
+  font-size: 0.75rem;
+}
+#undefined .dropdown-item,
+#undefined .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#undefined .link:hover,
+#undefined .dropdown-item:hover,
+#undefined .link:focus,
+#undefined .dropdown-item:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-menu {
+  background: #e6e6e6;
+}
+#undefined .nav-dropdown-sm .link:focus,
+#undefined .nav-dropdown-sm .link:hover,
+#undefined .nav-dropdown-sm .dropdown-item:focus,
+#undefined .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#undefined .navbar,
+#undefined .nav-dropdown-sm,
+#undefined .nav-dropdown-sm .link[aria-expanded="true"],
+#undefined .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#undefined .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#undefined .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#undefined .bg-color.transparent.opened .link:hover,
+#undefined .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
