--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7061,3 +7061,292 @@ section.form .container {
 #undefined .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
 }
+
+
+
+#msg-box3-h0 .mbr-section-title,
+#msg-box3-h0 p {
+  color: #000;
+}
+#msg-box3-h0 .mbr-section-title {
+  font-size: 19px;
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+  color: #28324e;
+}
+#msg-box3-h0 .lead {
+  font-family: 'Roboto Slab', serif;
+}
+#ext_menu-h1 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-h1 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-h1 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-h1 .close-icon::before,
+#ext_menu-h1 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-h1 .link,
+#ext_menu-h1 .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-h1 .link {
+  font-size: 1.05rem;
+}
+#ext_menu-h1 .dropdown-item,
+#ext_menu-h1 .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-h1 .link:hover,
+#ext_menu-h1 .dropdown-item:hover,
+#ext_menu-h1 .link:focus,
+#ext_menu-h1 .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-h1 .link[aria-expanded="true"],
+#ext_menu-h1 .dropdown-menu {
+  background: #307193;
+}
+#ext_menu-h1 .nav-dropdown-sm .link:focus,
+#ext_menu-h1 .nav-dropdown-sm .link:hover,
+#ext_menu-h1 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-h1 .nav-dropdown-sm .dropdown-item:hover {
+  background: #3985ad!important;
+}
+#ext_menu-h1 .navbar,
+#ext_menu-h1 .nav-dropdown-sm,
+#ext_menu-h1 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-h1 .nav-dropdown-sm .dropdown-menu {
+  background: #3d8eb9;
+}
+#ext_menu-h1 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-h1 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-h1 .bg-color.transparent.opened .link:hover,
+#ext_menu-h1 .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-h1 .link[aria-expanded="true"],
+#ext_menu-h1 .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#undefined .hide-buttons .nav-btn {
+  display: none !important;
+}
+#undefined .navbar-caption {
+  color: #ffffff;
+}
+#undefined .navbar-toggler {
+  color: #000000;
+}
+#undefined .close-icon::before,
+#undefined .close-icon::after {
+  background-color: #000000;
+}
+#undefined .link,
+#undefined .dropdown-item {
+  color: #000000;
+}
+#undefined .link {
+  font-size: 0.75rem;
+}
+#undefined .dropdown-item,
+#undefined .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#undefined .link:hover,
+#undefined .dropdown-item:hover,
+#undefined .link:focus,
+#undefined .dropdown-item:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-menu {
+  background: #e6e6e6;
+}
+#undefined .nav-dropdown-sm .link:focus,
+#undefined .nav-dropdown-sm .link:hover,
+#undefined .nav-dropdown-sm .dropdown-item:focus,
+#undefined .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#undefined .navbar,
+#undefined .nav-dropdown-sm,
+#undefined .nav-dropdown-sm .link[aria-expanded="true"],
+#undefined .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#undefined .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#undefined .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#undefined .bg-color.transparent.opened .link:hover,
+#undefined .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+
+
+
+
+#header3-h2 .mbr-section-title,
+#header3-h2 .mbr-section-subtitle {
+  text-align: center;
+}
+#ext_menu-h3 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-h3 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-h3 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-h3 .close-icon::before,
+#ext_menu-h3 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-h3 .link,
+#ext_menu-h3 .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-h3 .link {
+  font-size: 1.05rem;
+}
+#ext_menu-h3 .dropdown-item,
+#ext_menu-h3 .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-h3 .link:hover,
+#ext_menu-h3 .dropdown-item:hover,
+#ext_menu-h3 .link:focus,
+#ext_menu-h3 .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-h3 .link[aria-expanded="true"],
+#ext_menu-h3 .dropdown-menu {
+  background: #307193;
+}
+#ext_menu-h3 .nav-dropdown-sm .link:focus,
+#ext_menu-h3 .nav-dropdown-sm .link:hover,
+#ext_menu-h3 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-h3 .nav-dropdown-sm .dropdown-item:hover {
+  background: #3985ad!important;
+}
+#ext_menu-h3 .navbar,
+#ext_menu-h3 .nav-dropdown-sm,
+#ext_menu-h3 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-h3 .nav-dropdown-sm .dropdown-menu {
+  background: #3d8eb9;
+}
+#ext_menu-h3 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-h3 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-h3 .bg-color.transparent.opened .link:hover,
+#ext_menu-h3 .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-h3 .link[aria-expanded="true"],
+#ext_menu-h3 .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#footer1-h4 P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
+}
+#msg-box5-h5 H3 {
+  font-size: 18px;
+  text-align: left;
+  font-family: 'Slabo 27px', serif;
+}
+#msg-box5-h5 P {
+  font-size: 13px;
+  font-family: 'Merriweather', serif;
+  text-align: left;
+}
+#msg-box5-h5 SPAN {
+  font-size: 32px;
+}
+#undefined .hide-buttons .nav-btn {
+  display: none !important;
+}
+#undefined .navbar-caption {
+  color: #ffffff;
+}
+#undefined .navbar-toggler {
+  color: #000000;
+}
+#undefined .close-icon::before,
+#undefined .close-icon::after {
+  background-color: #000000;
+}
+#undefined .link,
+#undefined .dropdown-item {
+  color: #000000;
+}
+#undefined .link {
+  font-size: 0.75rem;
+}
+#undefined .dropdown-item,
+#undefined .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#undefined .link:hover,
+#undefined .dropdown-item:hover,
+#undefined .link:focus,
+#undefined .dropdown-item:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-menu {
+  background: #e6e6e6;
+}
+#undefined .nav-dropdown-sm .link:focus,
+#undefined .nav-dropdown-sm .link:hover,
+#undefined .nav-dropdown-sm .dropdown-item:focus,
+#undefined .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#undefined .navbar,
+#undefined .nav-dropdown-sm,
+#undefined .nav-dropdown-sm .link[aria-expanded="true"],
+#undefined .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#undefined .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#undefined .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#undefined .bg-color.transparent.opened .link:hover,
+#undefined .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#undefined .link[aria-expanded="true"],
+#undefined .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
