--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -119,7 +119,7 @@ h6,
   background-color: #fce794 !important;
 }
 .bg-danger {
-  background-color: #3d8eb9 !important;
+  background-color: #a38f84 !important;
 }
 .btn-primary {
   background-color: #efefef;
@@ -222,8 +222,8 @@ h6,
   border-color: #fad64a !important;
 }
 .btn-danger {
-  background-color: #3d8eb9;
-  border-color: #3d8eb9;
+  background-color: #a38f84;
+  border-color: #a38f84;
   color: #ffffff;
 }
 .btn-danger:hover,
@@ -232,14 +232,14 @@ h6,
 .btn-danger:active,
 .btn-danger.active {
   color: #ffffff;
-  background-color: #2a627f;
-  border-color: #2a627f;
+  background-color: #7d695d;
+  border-color: #7d695d;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #2a627f !important;
-  border-color: #2a627f !important;
+  background-color: #7d695d !important;
+  border-color: #7d695d !important;
 }
 .btn-primary-outline {
   background: none;
@@ -343,8 +343,8 @@ h6,
 }
 .btn-danger-outline {
   background: none;
-  border-color: #24536c;
-  color: #24536c;
+  border-color: #6e5c53;
+  color: #6e5c53;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
@@ -352,14 +352,14 @@ h6,
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #3d8eb9;
-  border-color: #3d8eb9;
+  background-color: #a38f84;
+  border-color: #a38f84;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #3d8eb9 !important;
-  border-color: #3d8eb9 !important;
+  background-color: #a38f84 !important;
+  border-color: #a38f84 !important;
 }
 .text-primary {
   color: #efefef !important;
@@ -374,7 +374,7 @@ h6,
   color: #fce794 !important;
 }
 .text-danger {
-  color: #3d8eb9 !important;
+  color: #a38f84 !important;
 }
 .alert-success {
   background-color: #28324e;
@@ -386,7 +386,7 @@ h6,
   background-color: #fce794;
 }
 .alert-danger {
-  background-color: #3d8eb9;
+  background-color: #a38f84;
 }
 .btn-social {
   border-color: #efefef;
@@ -434,7 +434,7 @@ h6,
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #98c5dd;
+  color: #dad1cd;
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
