--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7363,3 +7363,261 @@ section.form .container {
 #menu-hd .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
 }
+
+
+
+
+
+#msg-box8-hn .mbr-section-title,
+#msg-box8-hn p {
+  color: #fff;
+}
+#msg-box8-hn .mbr-section-title {
+  font-size: 23px;
+  font-family: 'Roboto Slab', serif;
+}
+#msg-box8-hn .lead P {
+  font-family: 'Roboto Slab', serif;
+  font-size: 15px;
+}
+#content1-ho P {
+  text-align: center;
+  font-size: 13px;
+}
+#content1-hp P {
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+  font-size: 15px;
+  color: #b8312f;
+}
+#content1-hq P {
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+}
+#footer1-ht P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
+}
+#menu-hu .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-hu .navbar-caption {
+  color: #ffffff;
+}
+#menu-hu .navbar-toggler {
+  color: #000000;
+}
+#menu-hu .close-icon::before,
+#menu-hu .close-icon::after {
+  background-color: #000000;
+}
+#menu-hu .link,
+#menu-hu .dropdown-item {
+  color: #000000;
+}
+#menu-hu .link {
+  font-size: 0.75rem;
+}
+#menu-hu .dropdown-item,
+#menu-hu .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-hu .link:hover,
+#menu-hu .dropdown-item:hover,
+#menu-hu .link:focus,
+#menu-hu .dropdown-item:focus {
+  color: #efefef;
+}
+#menu-hu .link[aria-expanded="true"],
+#menu-hu .dropdown-menu {
+  background: #e6e6e6;
+}
+#menu-hu .nav-dropdown-sm .link:focus,
+#menu-hu .nav-dropdown-sm .link:hover,
+#menu-hu .nav-dropdown-sm .dropdown-item:focus,
+#menu-hu .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#menu-hu .navbar,
+#menu-hu .nav-dropdown-sm,
+#menu-hu .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-hu .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#menu-hu .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#menu-hu .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-hu .bg-color.transparent.opened .link:hover,
+#menu-hu .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#menu-hu .link[aria-expanded="true"],
+#menu-hu .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+
+
+
+
+
+
+#ext_menu-hv .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-hv .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-hv .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-hv .close-icon::before,
+#ext_menu-hv .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-hv .link,
+#ext_menu-hv .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-hv .link {
+  font-size: 1.05rem;
+}
+#ext_menu-hv .dropdown-item,
+#ext_menu-hv .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-hv .link:hover,
+#ext_menu-hv .dropdown-item:hover,
+#ext_menu-hv .link:focus,
+#ext_menu-hv .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-hv .link[aria-expanded="true"],
+#ext_menu-hv .dropdown-menu {
+  background: #307193;
+}
+#ext_menu-hv .nav-dropdown-sm .link:focus,
+#ext_menu-hv .nav-dropdown-sm .link:hover,
+#ext_menu-hv .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-hv .nav-dropdown-sm .dropdown-item:hover {
+  background: #3985ad!important;
+}
+#ext_menu-hv .navbar,
+#ext_menu-hv .nav-dropdown-sm,
+#ext_menu-hv .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-hv .nav-dropdown-sm .dropdown-menu {
+  background: #3d8eb9;
+}
+#ext_menu-hv .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-hv .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-hv .bg-color.transparent.opened .link:hover,
+#ext_menu-hv .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-hv .link[aria-expanded="true"],
+#ext_menu-hv .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#footer1-hw P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
+}
+#header3-hx .mbr-section-title,
+#header3-hx .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box4-i2 H3 {
+  font-family: 'Slabo 27px', serif;
+  text-align: center;
+  font-size: 30px;
+}
+#msg-box4-i2 P {
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#content2-hz SPAN {
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+}
+#content2-hz P {
+  text-align: left;
+  font-size: 13px;
+}
+#content2-hz BLOCKQUOTE {
+  font-family: 'Bitter', serif;
+  font-size: 13px;
+}
+#menu-i4 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-i4 .navbar-caption {
+  color: #ffffff;
+}
+#menu-i4 .navbar-toggler {
+  color: #000000;
+}
+#menu-i4 .close-icon::before,
+#menu-i4 .close-icon::after {
+  background-color: #000000;
+}
+#menu-i4 .link,
+#menu-i4 .dropdown-item {
+  color: #000000;
+}
+#menu-i4 .link {
+  font-size: 0.75rem;
+}
+#menu-i4 .dropdown-item,
+#menu-i4 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-i4 .link:hover,
+#menu-i4 .dropdown-item:hover,
+#menu-i4 .link:focus,
+#menu-i4 .dropdown-item:focus {
+  color: #efefef;
+}
+#menu-i4 .link[aria-expanded="true"],
+#menu-i4 .dropdown-menu {
+  background: #e6e6e6;
+}
+#menu-i4 .nav-dropdown-sm .link:focus,
+#menu-i4 .nav-dropdown-sm .link:hover,
+#menu-i4 .nav-dropdown-sm .dropdown-item:focus,
+#menu-i4 .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#menu-i4 .navbar,
+#menu-i4 .nav-dropdown-sm,
+#menu-i4 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-i4 .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#menu-i4 .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#menu-i4 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-i4 .bg-color.transparent.opened .link:hover,
+#menu-i4 .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#menu-i4 .link[aria-expanded="true"],
+#menu-i4 .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
